--- a/ConferenceApp/appsettings.json
+++ b/ConferenceApp/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "DbConnection": "User ID=conf_app;Password=docker;Host=postgres;Port=5432;Database=conference;Pooling=true;CommandTimeout=3000"
   }
 }
